# CPLD

./: CHANGELOG.md  CPLD-code.cabal
Assignements0/: CPLD-code.cabal  README.md
Assignements0/app/assignment03/: Lambda-DESKTOP-JONA-2.hs  Lambda.hs  Lambda2.hs
app/assignment01/: Main.hs  rpn.hs
app/assignment02/: Infix.hs
app/assignment03/: Lambda.hs
minhs/: Main.hs  minhs1.cabal  run_tests_cabal.cmd  run_tests_cabal.sh
minhs/MinHS/: Evaluator.hs  EvaluatorOG.hs  EvaluatorOG2.hs  Pretty.hs  TypeChecker.hs
minhs/tests/driver/: Check.hs
minhs/tests/task1/5_let/4_partial_application/: 009.mhs  010.mhs
minhs/tests/task2/0_simple/: 000.mhs  001.mhs  002.mhs  003.mhs  004.mhs  005.mhs  006.mhs  007.mhs  008.mhs  009.mhs  010.mhs  011.mhs  012.mhs  013.mhs  014.mhs  015.mhs  015.out  016.mhs  017.mhs
minhs/tests/task2/1_error/: 000.mhs  001.mhs  002.mhs  003.mhs
minhs/tests/task2/2_complex/: 000.mhs  001.mhs  002.mhs  003.mhs  004.mhs  005.mhs  006.mhs  007.mhs  008.mhs  009.mhs  010.mhs  011.mhs  012.mhs  013.mhs
minhs/tests/task3/: 000.mhs  001.mhs  002.mhs
minhs/tests/task4/: 000.mhs  001.mhs  002.mhs
minhs/tests/task5/: 000.mhs
minhs/tests/task6/: 000.mhs  001.mhs
